--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,12 +13,12 @@ classifiers = [
     "License :: OSI Approved :: Apache Software License",
 ]
 dependencies = [
-    "tokenizers==0.15.1", "sentencepiece==0.1.99", "shortuuid",
+    "transformers==4.41.2", "tokenizers==0.19.1", "sentencepiece==0.1.99", "shortuuid",
     "accelerate==0.31.0", "peft", "bitsandbytes",
-    "pydantic", "markdown2[all]", "numpy", "scikit-learn==1.2.2",
-    "gradio==4.16.0", "gradio_client==0.8.1", "openai",
-    "requests", "httpx==0.24.0", "uvicorn", "fastapi", "decord",
-    "einops==0.6.1", "einops-exts==0.0.4", "timm==0.6.13",
+    "pydantic==2.7.3", "markdown2[all]", "numpy==1.25.2", "scikit-learn==1.2.2",
+    "gradio==4.16.0", 
+    "requests==2.31.0", "httpx==0.24.0", "uvicorn", "fastapi", "decord",
+    "einops==0.8.0", "einops-exts==0.0.4", "timm==1.0.7",
 ]
 
 [project.optional-dependencies]
